--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
     <div id="root"></div>
   </body>
   <!-- add bundle.js for build-->
-   <script type="text/javascript" src="./bundle.js"></script>
+   <script src="./bundle.js"></script>
 </html>
